$Id$

NOTE: This is the 1.3.X development branch.
Put code changes right below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - 06-Apr-10 cek Fixed bug [ 2769084 ] xss vulnerability with cat_id in month.php
 - 06-Apr-10 cek Security Fix: Fixes for cross-site scripting and denial
   of service.  For details of issues:
   http://tasecuritygroup.com/download/SCL-2010-001.txt
 - 17-Mar-10 bb Patch [ 2971855 ] German updated translation
 - 06-Mar-10 bb Removed the comments from "font-size" in css/styles.css.
   I'm not seeing any problem with these.
   Both my web host and my PC with WAMP look fine with both IE and Firefox.
   Clean up the CSS a bit.
 - 06-Mar-10 bb Bug [ 2954781 ] "Color options" are not set on the left margin
 - 06-Mar-10 bb Fix bugs when empty( $settings['db_password']
 - 06-Mar-10 bb Patch [ 2954502 ] Problems with hinding duplicate entries in layers
   The code has changed quite a bit since this patch was submitted. I think I got everything.
 - 06-Mar-10 bb Bug [ 2962773 ] $end_file path failure in load_translation_text()
 - 06-Mar-10 bb Fix some typos and cleanup.
 - 21-Feb-10 bb Patch [ 2954494 ] Event reminder am/pm setting not remembered
   And extensive reworking of edit_entry_handler.php for efficiency and readability.
 - 21-Feb-10 bb Patch [ 1805743 ] Debian patch for php5-sqlite3
   This patch was not complete. And it was deleting ordinary SQLite.
   I think I've got in now. Someone with SQLite3 needs to test it though.
 - 06-Feb-10 bb fix typo from Patch 2938327.
   Patch [ 2946473 ] Three more STRICT level PHP 5.2 errors
 - 04-Feb-10 bb In register.php, combine some nearly identical functions.
   And a liitle cleanup.
 - 24-Jan-10 bb Patch [ 2938327 ] Get rid of two more PHP 5.3 deprecations
 - 24-Jan-10 bb Patch [ 2938298 ] error message: stat failed for includes/js/views.php
 - 27-Dec-09 bb In includes/init.php, moving some of the CSS links into print_header($INC)
   and some other cleanup.